<resources>
    <string name="app_name">TripHava</string>
    <string name="r_string_switch_text">Include Canceled Trip</string>
    <string name="any">Any</string>
    <string name="under3Km">under 3 Km</string>
    <string name="from3to8km">From 3 to 8 Km</string>
    <string name="from8to15km">from 8 to 15 km</string>
    <string name="morethan15km">more than 15 km</string>
    <string name="under5min">under 5 min</string>
    <string name="from5to10min">from 5 to 10 min</string>
    <string name="from10to20min">from 10 to 20 min</string>
    <string name="morethan20min">more than 20 min</string>
</resources>
