<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Trip Search"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/search_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_home"
        android:layout_margin="15dp"
        android:hint="Key word for search ">

    </EditText>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_id"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:checked="false"
        android:switchMinWidth="56dp"
        android:text="@string/r_string_switch_text"
        android:textOff="OFF"
        android:textOn="ON" />

    <LinearLayout
        android:id="@+id/check_boxes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch1"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/checkbox_any_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/any" />

                <RadioButton
                    android:id="@+id/checkbox_under_3km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/under3Km" />

                <RadioButton
                    android:id="@+id/checkbox_from_3_to_8Km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from3to8km" />

                <RadioButton
                    android:id="@+id/checkbox_from_8_to_15km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from8to15km" />

                <RadioButton
                    android:id="@+id/checkbox_more_than_15km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morethan15km" />
            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/checkbox_any_time"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any" />

                <RadioButton
                    android:id="@+id/checkbox_under_5min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/under5min" />

                <RadioButton
                    android:id="@+id/checkbox_from_5_to_10min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from5to10min" />

                <RadioButton
                    android:id="@+id/checkbox_from_10_to_20min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from10to20min" />

                <RadioButton
                    android:id="@+id/checkbox_more_than_20min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morethan20min" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_boxes_layout"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:text="Search" />
</RelativeLayout>
